--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <audio controls autoplay loop>
-        <source src="/4222COMP/tutorial3/audio/funkytown.mp3" type="audio/mpeg">
+        <source src="audio/funkytown.mp3" type="audio/mpeg">
     </audio>
     <h1>Welcome to my epic Bullsquid & Houndeye appreciation Page!!</h1>
-    <img src="/4222COMP/tutorial3/img/pridesquid.gif" alt="they're even gay like me :3"> <img src="/4222COMP/tutorial3/img/houdeye.gif" alt="they do show it but houndeyes are gay too :3">
+    <img src="img/pridesquid.gif" alt="they're even gay like me :3"> <img src="img/houdeye.gif" alt="they do show it but houndeyes are gay too :3">
     <p>ADD THEM TO HL3</p>
 </body>
 </html>
